--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>notify</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600' rel='stylesheet' type='text/css'>
     <link href="./css/font-awesome.css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" />
 
