Change npm install command to the correct name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Installation</h1>
         <p>notify is written with node, so you can install with npm.</p>
         <div class="code">
-            <code>npm install -g notify</code>
+            <code>npm install -g notify-cli</code>
         </div>
         <br />
         <h1>Usage</h1>
