--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             notify
         </div>
         <div class="one-liner">
-            Send push notifications from the terminal
+            Notify your phone from the terminal
         </div>
         <div class="download">
             <a href="#">
