Update play store link

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             Notify your phone from the terminal
         </div>
         <div class="download">
-            <a href="#">
+            <a href="https://play.google.com/store/apps/details?id=com.kevinbedi.notify.notify">
                 Download for Android <img src="./img/play-store.ico" />
             </a>
             <a href="#">
-                iOS in development <img src="./img/app-store.png" />
+                iOS is coming soon <img src="./img/app-store.png" />
             </a>
         </div>
     </div>
