--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <p>After registering, you can use notify as follows:</p>
         <div class="code">
-            <code>someLongRunningCommand || notify</code>
+            <code>someLongRunningCommand ; notify</code>
         </div>
         <p>You will receive a push notification to your phone when the command has completed, regardless of whether or not it was successful.</p>
     </div>
