--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <code>someLongRunningCommand ; notify</code>
         </div>
         <p>You will receive a push notification to your phone when the command has completed, regardless of whether or not it was successful.</p>
+        <p>You can also specify what the notification will say, like this:</p>
+        <div class="code">
+            <code>notify -t "My custom message"</code>
+        </div>
     </div>
     <a href="https://github.com/mashlol/notify"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
 </body>
