--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Notify your phone from the terminal
         </div>
         <div class="download">
-            <a href="https://play.google.com/store/apps/details?id=com.kevinbedi.notify.notify">
+            <a href="https://play.google.com/store/apps/details?id=com.kevinbedi.notify">
                 Download for Android <img src="./img/play-store.ico" />
             </a>
             <a href="#">
